--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "eslint-config-google": "0.12.0"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "4.16.4",
+    "linkifyjs": "^2.1.8",
+    "nunjucks": "^3.2.0",
+    "twit": "2.2.11",
+    "twitter": "^1.7.1"
   }
 }
