--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-google": "0.12.0"
   },
   "dependencies": {
+    "amp-toolbox-cors": "^0.2.4",
     "express": "4.16.4",
     "js-yaml": "^3.13.1",
     "linkifyjs": "^2.1.8",
