--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/sebastianbenz/amp-dev-live-2019#readme",
   "devDependencies": {
     "eslint": "5.16.0",
-    "eslint-config-google": "0.12.0"
+    "eslint-config-google": "0.12.0",
+    "gulp": "^4.0.0"
   },
   "dependencies": {
     "amp-toolbox-cors": "^0.2.4",
     "express": "4.16.4",
+    "image-size": "^0.7.3",
     "js-yaml": "^3.13.1",
     "linkifyjs": "^2.1.8",
     "mustache": "^3.0.1",
